--- a/netflix_analysis.ipynb
+++ b/netflix_analysis.ipynb
@@ -7,39 +7,44 @@
    "source": [
     "# Netflix Content Strategy\n",
     "\n",
-    "### Project Title  \n",
-    "What types of content are most commonly released on the platform and how has that changed over time?\n",
-    "A data-driven approach for strategic content acquisition planning\n",
-    "\n",
-    "### Business Model  \n",
-    "Subscription-based revenue  \n",
-    "User acquisition and retention through relevant content\n",
+    "## Project Title\n",
+    "Which types of content dominate Netflix and how has their distribution changed over time?  \n",
+    "A data-driven approach for strategic content acquisition and planning.\n",
     "\n",
     "\n",
-    "### Business Objective  \n",
     "\n",
-    "Identify the content trends in terms of genres, format (movies vs. TV shows), and release patterns over time, in order to optimize catalog expansion and investment strategies"
+    "## Business Model\n",
+    "Subscription-based model focused on attracting and retaining users through relevant and diverse content.\n",
+    "\n",
+    "\n",
+    "## Business Objective\n",
+    "Analyze the balance between movies and TV shows, identify top genres, track yearly trends, and examine patterns by geography, age rating, and content duration.\n",
+    "\n",
+    "\n",
+    "\n",
+    "## Hypotheses\n",
+    "1. Movies make up a larger share of Netflix’s catalog, but the share of TV shows has grown in recent years.  \n",
+    "2. Certain genres, such as *International Movies* and *Dramas*, are among the most frequent.  \n",
+    "3. Most titles are produced in the United States, with strong contributions from other countries.  \n",
+    "4. A significant portion of titles has higher age ratings (TV-MA, TV-14).  \n",
+    "5. Most movies follow standard durations (80–120 minutes), while TV shows often have fewer seasons.\n",
+    "\n",
+    "\n",
+    "\n",
+    "## Research Questions\n",
+    "1. Which genres are most frequent on Netflix?  \n",
+    "2. How has the movies-to-TV-shows ratio changed over time?  \n",
+    "3. How is content distributed by country of production?  \n",
+    "4. Which age ratings are most common?  \n",
+    "5. What are the dominant formats in terms of duration and number of TV show seasons?\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "185e9023",
    "metadata": {},
-   "source": [
-    "###  Hypothesis & Research Questions\n",
-    "\n",
-    "#### Hypothesis:\n",
-    "Content characteristics such as genre, format, and release year are key factors influencing Netflix’s content planning and catalog composition over time.\n",
-    "\n",
-    "#### Research Questions:\n",
-    "1.  Which genres are most frequently released on the platform?\n",
-    "2.\tHow has the composition of content types (Movies vs. TV Shows) changed over the years?\n",
-    "3.\tWhat are the dominant trends in release years, and how consistent is content output over time?\n",
-    "4.\tWhich content durations (e.g. short films, standard, or long-format content) are most common?\n",
-    "\n",
-    "\n",
-    "These questions will guide the EDA and help shape strategic recommendations for Netflix’s content acquisition and promotion strategy."
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
